modified index html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>SPAM</title>
+		<title>≈MEOW≈</title>
 	</head>
 	<body>
 		<script>
 			meow meow meow
 			for(var i=0; i<10; i++){
-				alert("HI!");
+				alert("PURRRR!");
 			}
 		</script>
 	</body>
