--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 			meow meow meow
 			for(var i=0; i<10; i++){
 				alert("PURRRR!");
+			Heather's faviourite colours:
+			1. Blue
 			}
 		</script>
 	</body>
