added 1 favorite color

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 		<title>≈MEOW≈</title>
 	</head>
 	<body>
-		<script>
+		<script>Tasha's Favorite Colors:
+			1.Purple			
 			meow meow meow
 			for(var i=0; i<10; i++){
 				alert("PURRRR!");
