added second color

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 			meow meow meow
 			for(var i=0; i<10; i++){
 				alert("PURRRR!");
+			}			
 			Heather's faviourite colours:
 			1. Blue
-			}
+			2. Black
 		</script>
 	</body>
 </html>
