added 2nd favorite color

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	</head>
 	<body>
 		<script>Tasha's Favorite Colors:
-			1.Purple			
+			1.Purple
+			2.Rainbowwww			
 			meow meow meow
 			for(var i=0; i<10; i++){
 				alert("PURRRR!");
