added 3rd color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<body>
 		<script>Tasha's Favorite Colors:
 			1.Purple
-			2.Rainbowwww			
+			2.Rainbowwww
+			3.Teal			
 			meow meow meow
 			for(var i=0; i<10; i++){
 				alert("PURRRR!");
